fix: format order numbers with ASCII digits